--- a/Final_Project.html
+++ b/Final_Project.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Website</title>
+    <title>My Website</title>
 </head>
 <body>
     <header>
-        <h1>Welcome to Your Website</h1>
+        <h1>Welcome to My Website</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -23,7 +23,7 @@
         <!-- Page-specific content goes here -->
     </main>
     <footer>
-        <p>&copy; 2024 Your Name</p>
+        <p>&copy; 2024 Noah Touchet</p>
     </footer>
 </body>
 </html>
